@@ -160,6 +160,9 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase
     {
         $parentIsTpl = isset($this->parent) && $this->parent->_objType == 2;
         if ($this->smarty->debugging) {
+            if (!isset($this->smarty->_debug)) {
+                $this->smarty->_debug = new Smarty_Internal_Debug();
+            }
             $this->smarty->_debug->start_template($this, $display);
         }
         // checks if template exists
@@ -339,6 +342,9 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase
         $tpl->_cache = array();
         if (isset($uid)) {
             if ($smarty->debugging) {
+                if (!isset($smarty->_debug)) {
+                    $smarty->_debug = new Smarty_Internal_Debug();
+                }
                 $smarty->_debug->start_template($tpl);
                 $smarty->_debug->start_render($tpl);
             }
